[package]
name = "space-invaders"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true

[dependencies]
emu8080 = { git = "https://github.com/SleepySpaceBear/emu8080.git", branch = "main" }
pixels = "0.15"
winit = { version = "0.30.12", features = ["wayland"] }

log = "0.4"
env_logger = "0.11"

modular-bitfield = { version = "0.12" }
awedio = { version = "0.5" }
